<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/date_and_time"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center_horizontal"
        android:hint="@string/hint_date_and_time"
        android:inputType="date"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <EditText
        android:id="@+id/et_turnaround_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hint_turnaround_hours"
        android:inputType="number"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/et_date" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/btn_get_due_date"
        app:layout_constraintTop_toBottomOf="@+id/et_turnaround_hours" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/due_date"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        tools:layout_editor_absoluteX="5dp" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>